tests/testcases/invalid/semantic/48_incomplete_class_inheritance.ciel
// Test: Incomplete type used as base class in inheritance
// Expected: Error - base class must be complete before inheritance

class ForwardDeclaredClass;

class Derived : public ForwardDeclaredClass {
    int member;
};
